tests/negative/comptime/unreachable.orng
fn main() -> Int {
    let x: Int = comptime { unreachable }
    x
}